force-app/main/default/objects/File_Upload_Status__c/File_Upload_Status__c.object-meta.xml
<CustomObject>
    <label>File Upload Status</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Upload Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>