force-app/main/default/objects/File_Upload_Status__c/fields/Content_Version__c.field-meta.xml
<CustomField>
    <fullName>Content_Version__c</fullName>
    <label>Content Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>