force-app/main/default/objects/File_Upload_Status__c/fields/NVBug__c.field-meta.xml
<CustomField>
    <fullName>NVBug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NVBug</label>
    <referenceTo>NVBug__c</referenceTo>
    <relationshipLabel>File Upload Status</relationshipLabel>
    <relationshipName>File_Upload_Status</relationshipName>
    <type>Lookup</type>
</CustomField>