force-app/main/default/objects/File_Upload_Status__c/fields/NVBugId_CvId_ExtId__c.field-meta.xml
<CustomField>
    <fullName>NVBugId_CvId_ExtId__c</fullName>
    <externalId>true</externalId>
    <label>NVBugId_CvId_ExtId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>