force-app/main/default/objects/File_Upload_Status__c/fields/Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status__c</fullName>
    <label>Upload Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>